fixed Chipped special lanterns being waterlogged by default (#173)