@@ -1,0 +1,22 @@
+package earth.terrarium.chipped.mixins;
+
+import earth.terrarium.chipped.common.registry.ModBlocks;
+import net.minecraft.core.BlockPos;
+import net.minecraft.world.level.BlockGetter;
+import net.minecraft.world.level.block.NetherWartBlock;
+import net.minecraft.world.level.block.state.BlockState;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.injection.At;
+import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
+
+@Mixin(NetherWartBlock.class)
+public class NetherWartBlockMixin {
+
+    @Inject(method = "mayPlaceOn", at = @At("HEAD"), cancellable = true)
+    private void chipped$mayPlaceOn(BlockState state, BlockGetter level, BlockPos pos, CallbackInfoReturnable<Boolean> cir) {
+        if (state.is(ModBlocks.SOUL_SAND_TAG)) {
+            cir.setReturnValue(true);
+        }
+    }
+}
