@@ -1,13 +1,15 @@
 {
-    "required": true,
-    "package": "earth.terrarium.chipped.mixins",
-    "compatibilityLevel": "JAVA_17",
-    "minVersion": "0.8.5",
-    "mixins": [
-        "BlockBehaviourMixin",
-        "DataFixersMixins"
-    ],
-    "injectors": {
-        "defaultRequire": 1
-    }
+  "required": true,
+  "package": "earth.terrarium.chipped.mixins",
+  "compatibilityLevel": "JAVA_17",
+  "minVersion": "0.8.5",
+  "mixins": [
+    "BlockBehaviourMixin",
+    "DataFixersMixins",
+    "EnchantmentTableBlockMixin",
+    "NetherWartBlockMixin"
+  ],
+  "injectors": {
+    "defaultRequire": 1
+  }
 }
