@@ -5,7 +5,7 @@ enabled_platforms=fabric,forge
 
 archives_base_name=chipped
 mod_id=chipped
-mod_version=2.1.1
+mod_version=2.1.2
 maven_group=earth.terrarium
 
 fabric_loader_version=0.14.14
